Added icons and created a post class for posting new shipments

--- a/RMaD/RMaD/RMaD/RMaD.csproj
+++ b/RMaD/RMaD/RMaD/RMaD.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Messaging" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,7 +56,9 @@
       <DependentUpon>AddShipment.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Authentication.cs" />
+    <Compile Include="Classes\Package.cs" />
     <Compile Include="Classes\User.cs" />
+    <Compile Include="Classes\UserGroups.cs" />
     <Compile Include="CreateAccount.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +73,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="UxForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,13 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="UxForm.resx">
       <DependentUpon>UxForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -109,6 +113,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Images\Icons\ExpandMenu.png" />
+    <Content Include="Images\Icons\GroupMenu.png" />
+    <Content Include="Images\Icons\ReportMenu.png" />
+    <Content Include="Images\Icons\Settings.png" />
+    <Content Include="Images\Icons\Shipments.png" />
+    <None Include="Images\Icons\UserIcon.png" />
+    <Content Include="Images\Icons\UserMenu.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
